--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact Me</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <h1>My contact details</h1>
@@ -12,11 +13,11 @@
   <hr>
   <form action="mailto:noki.nikaj@hotmail.com" method="post" enctype="text/plain">
     <label>Your name:</label><br>
-    <input type="text" name="yourname"><br>
+    <input type="text" name="your name"><br>
     <label>Your Email:</label><br>
-    <input type="email" name="youremail" valiue=""><br>
+    <input type="email" name="your email" valiue=""><br>
     <label>Your Message:</label><br>
-    <textarea name="yourmessage" id="" cols="30" rows="10"></textarea><br>
+    <textarea name="your message" id="" cols="30" rows="10"></textarea><br>
     <input type="submit" name="su">
   </form>
  
