--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Nordin's Personal Site</title>
+    <link rel="stylesheet" href="css/styles.css">
+
 </head>
 <body>
     <table cellspacing="20">
